--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <link rel="manifest" href="/pwa-manifest.json">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Denmar Feliciano</title>
+
+
+
   </head>
   <body>
     <div id="app"></div>
@@ -16,6 +19,21 @@
       if('serviceWorker' in navigator) {
         navigator.serviceWorker.register('/service-worker.js', { scope: '/' });
       }
+    </script>
+
+    <!-- Change CSS based on Website -->
+    <script>
+      function setTheme() {
+        let body = document.body;
+        let hashList = window.location.hash.split('/');
+        if (hashList.length < 2) {
+          body.className = ""
+          return;
+        }
+        body.className = hashList[1];
+      }
+      setTheme();
+      window.addEventListener('popstate', setTheme)
     </script>
   </body>
 </html>
